gitops/apps/base/ui/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ui
  labels:
    app: ui
    app.kubernetes.io/part-of: system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
        - name: ui
          image: 'quay.io/wael2000/fsi-ui:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi              
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
